<resources>
    <string name="app_name" translatable="false">BoxApp15</string>
    <string name="title_activity_player">Leanback Activity_player</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="loading_data">Loading data</string>
    <string name="login_error">Login Error</string>
    <string name="an_error_occurred_while_trying_to_login_please_try_again_later">An error occurred while trying to login. Please try again later.</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="my_list">My List</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="leave">Leave</string>
    <string name="also_watch">Also watch</string>
    <string name="loading_movie_data_try_again_in_moments">Loading movie data, try again in moments</string>
    <string name="favorite_error">Favorite error</string>
    <string name="occurred_an_error_to_add_this_movie_to_favorites">Occurred an error to add this movie to favorites</string>
    <string name="occurred_an_error_to_remove_this_movie_to_favorites">Occurred an error to remove this movie to favorites</string>
    <string name="season_s">Season %1$s</string>
    <string name="seasons">Seasons</string>
    <string name="audio">Audio</string>
    <string name="subtitle">Subtitle</string>
    <string name="resolution">Resolution</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume_from_where_you_left_off">Resume from where you left off?</string>
    <string name="tv">TV</string>
    <string name="soccer">Soccer</string>
    <string name="adult">Adult</string>
    <string name="occurred_an_error_to_load_movie_details">Occurred an error to load movie details</string>
    <string name="error_to_load_movie_details">Error to load movie details</string>
    <string name="season">Season</string>
    <string name="episode_d">Episode %d</string>
    <string name="tv_categories">Tv Categories</string>
    <string name="channels">Channels</string>
    <string name="tv_guide">Tv Guide</string>
    <string name="guide">Guide</string>
    <string name="playback">Playback</string>
    <string name="no_epg_data">No EPG data</string>
    <string name="atention_">ATENTION!</string>
    <string name="adult_content">Adult content</string>
    <string name="access_code_required">Access code required:</string>
    <string name="repeat_code">Repeat Code</string>
    <string name="access_code">Access Code</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="password_not_match">Password not match</string>
    <string name="wrong_password">Wrong password</string>
    <string name="categories">Categories</string>
    <string name="error_to_retrieve_channel">Error to retrieve channel</string>
    <string name="minus_10_s">-10s</string>
    <string name="plus_10_s">+10s</string>
    <string name="epg">Epg</string>
    <string name="live">Live</string>
    <string name="impossible_load_vod_without_id">Impossible load vod without id</string>
    <string name="audio_subtitle">Audio/Subtitle</string>
</resources>