<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerPassword"
            type="Boolean" />
        <variable
            name="listener"
            type="com.example.boxapp3.listeners.models.activities.MainActivityModelListener" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_modal_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:foreground="#80000000"
            android:foregroundTintMode="add"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_cristalizado4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_amarelado_tranparente"
            android:padding="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sulphur_point"
                android:text="@string/atention_"
                android:textColor="@color/default_color"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/sulphur_point"
                android:text="@string/adult_content"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView41"
                app:layout_constraintEnd_toEndOf="@+id/textView39"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sulphur_point"
                android:text="@string/access_code_required"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextText2"
                app:layout_constraintEnd_toEndOf="@+id/textView39"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/textView39"
                app:layout_constraintTop_toBottomOf="@+id/textView40" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_button_app15"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> listener.onParentalPasswordSet()}"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                android:text="@string/proceed"
                android:textAlignment="center"
                android:textColor="#373737"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView43"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextText3" />

            <TextView
                android:id="@+id/btn_cancel_modal_adult_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@drawable/bg_button_app15"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#373737"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView42"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView42"
                app:layout_constraintTop_toTopOf="@+id/textView42" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#99FFFFFF"
                android:backgroundTintMode="src_over"
                android:ems="10"
                android:hint="@string/access_code"
                android:inputType="numberPassword"
                android:nextFocusDown="@id/editTextText3"
                android:numeric="integer"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#DDDDDD"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#99FFFFFF"
                android:backgroundTintMode="src_over"
                android:ems="10"
                android:hint="@string/repeat_code"
                android:inputType="numberPassword"
                android:nextFocusUp="@id/editTextText2"
                android:nextFocusDown="@id/textView42"
                android:numeric="integer"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#DDDDDD"
                android:textSize="20sp"
                android:visibility="@{registerPassword ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>