<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.boxapp3.models.activities.PlayerVodActivityModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_modal_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:foreground="#80ffffff"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_cristalizado4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_pass_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_amarelado_tranparente"
            android:padding="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/resume_from_where_you_left_off"
                android:textColor="@color/default_color"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_app15"
                android:clickable="true"
                android:focusable="true"
                android:nextFocusLeft="@id/btn_no"
                android:nextFocusRight="@id/btn_no"
                android:nextFocusUp="@id/btn_yes"
                android:nextFocusDown="@id/btn_yes"
                android:onClick="@{(v) -> model.continueWatching()}"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="#E4E4E4"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView40" />

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_app15"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v) -> model.cancelContinueWatching()}"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="#E4E4E4"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_yes"
                app:layout_constraintTop_toTopOf="@+id/btn_yes" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>